--- a/web/app/components/hero/swipable_component.html.erb
+++ b/web/app/components/hero/swipable_component.html.erb
@@ -15,9 +15,9 @@
 					<% else %>
 						<div class="hidden pl-6 pr-5 overflow-x-hidden overflow-y-scroll transition-all duration-500 opacity-0 h-screen-3/4 is-bot md:h-screen-3/4"
 								 data-swipable-module="onboarding"
-								 data-target="swipable.onboarding"></div>
+								 data-swipable-target="onboarding"></div>
 						<div data-swipable-module="swipable-items"
-								 data-target="swipable.items">
+								 data-swipable-target="items">
 							<div class="px-5 mt-5 mb-1">
 								<div class="text-xl font-semibold md:text-2xl">
 									Que tipos de evento você curte?
