--- a/web/app/views/components/follow/_follow.html.erb
+++ b/web/app/views/components/follow/_follow.html.erb
@@ -15,7 +15,7 @@
 
 <div class="me-follow-chip-set mdc-chip-set"
      data-controller="follow-chip-set"
-     data-target="follow-chip-set.chip-set"
+     data-follow-chipset-target="chip-set"
      data-follow-chip-set-similar-to="<%= data[:event_id] %>"
      data-follow-chip-set-expand-to-similar="<%= data[:expand_to_similar] %>"
      id="<%= data[:identifier] ? data[:identifier] : "follow-chip-set__#{data[:type]}-#{data[:event_id]}" %>">
