--- a/web/app/views/layouts/application.html.erb
+++ b/web/app/views/layouts/application.html.erb
@@ -55,7 +55,7 @@
 <div class="md:shadow-lg md:sticky md:top-0 w-full mx-auto transition-transform duration-100 transform bg-white shadow-sm z-50 <%= class_names('sticky top-0': content_for?(:top_app_bar_title)) %>"
 		 data-controller="head"
 		 data-reflex-permanent
-		 data-target="head.head">
+		 data-head-target="head">
 	<%= render partial: 'layouts/top-app-bar' %>
 </div>
 
