--- a/web/app/views/layouts/classifier/_chips.html.erb
+++ b/web/app/views/layouts/classifier/_chips.html.erb
@@ -15,7 +15,7 @@
 	%>
 <div data-controller='label' class="mdc-menu-surface--anchor">
 	<div class="mdc-chip" tabindex="0" style="background-color: <%= get_score_scale_color(event.public_send(feature_score)) %>">
-		<div data-target="label.menuButton" data-action="click->label#openMenu" class="mdc-chip__text">
+		<div data-label-target="menuButton" data-action="click->label#openMenu" class="mdc-chip__text">
 			<%= "#{event.public_send(feature_name)} (#{round_score event.public_send(feature_score), 2})" %>
 		</div>
 	</div>
