--- a/web/app/views/layouts/classifier/_input.html.erb
+++ b/web/app/views/layouts/classifier/_input.html.erb
@@ -1,5 +1,5 @@
 <div class="me-text-field__container me-text-field--fullwidth">
-  <div data-target="filter.inputContainer"
+  <div data-filter-target="inputContainer"
     class="mdc-text-field mdc-text-field--outlined mdc-text-field--no-label mdc-text-field--with-trailing-icon">
     <%= text_field_tag 'chip', nil, class: 'mdc-text-field__input', :"data-target" => "filter.input" %>
     <div class="mdc-notched-outline mdc-notched-outline--upgraded">
