--- a/web/app/views/layouts/classifier/_kinds.html.erb
+++ b/web/app/views/layouts/classifier/_kinds.html.erb
@@ -1,18 +1,18 @@
 <div data-controller='kinds' data-kinds-identifier="<%= event.id %>">
-	<span data-target="kinds.dialogButton" data-action="click->kinds#openDialog">
+	<span data-kinds-target="dialogButton" data-action="click->kinds#openDialog">
 		<%= event.kinds_name.blank? ? 'EDITAR' : event.kinds_name.join(' ') %>
 	</span>
-	<div data-target="kinds.dialog" class="mdc-dialog" role="alertdialog" aria-modal="true"
+	<div data-kinds-target="dialog" class="mdc-dialog" role="alertdialog" aria-modal="true"
 			 aria-labelledby="my-dialog-title" aria-describedby="my-dialog-content">
 		<div class="mdc-dialog__container">
 			<div class="mdc-dialog__surface">
 				<h2 class="mdc-dialog__title" id="my-dialog-title">Tipo (kind)</h2>
 				<div class="mdc-dialog__content" id="my-dialog-content">
-					<div data-controller="filter" data-target="kinds.chipsKinds">
-						<div data-filter-type="kinds" data-target="filter.chipset"
+					<div data-controller="filter" data-kinds-target="chipsKinds">
+						<div data-filter-type="kinds" data-filter-target="chipset"
 								 class="me-chip-set mdc-chip-set mdc-chip-set--filter mdc-chip-set--input">
 							<% Artifact.kinds_whitelist.sort.each do |kind| %>
-								<div data-target="filter.chip" data-action="MDCChip:selection->filter#select"
+								<div data-filter-target="chip" data-action="MDCChip:selection->filter#select"
 										 class="me-chip mdc-chip <%= event.kinds_name.include?(kind) ? 'mdc-chip--selected' : nil %>"
 										 data-turbolinks-scroll="false">
 									<div class="mdc-chip__checkmark">
