--- a/web/app/views/layouts/classifier/_select.html.erb
+++ b/web/app/views/layouts/classifier/_select.html.erb
@@ -1,4 +1,4 @@
-<div data-target="label.menu" class="mdc-menu mdc-menu-surface">
+<div data-label-target="menu" class="mdc-menu mdc-menu-surface">
 	<ul class="mdc-list" role="menu" aria-hidden="true" aria-orientation="vertical" tabindex="-1">
 		<% if feature == 'themes' %>
 			<% Event::THEMES.each do |theme| %>
