--- a/web/app/components/left_sidebar/my_agenda_component.html.erb
+++ b/web/app/components/left_sidebar/my_agenda_component.html.erb
@@ -1,6 +1,6 @@
 <%= component_controller id: 'my-agenda', class: 'h-full' do %>
-  <div class="h-full" data-target="left-sidebar--my-agenda.scrollContent">
-    <div id="calendar" data-target="left-sidebar--my-agenda.calendar" class="mt-3 select-none simple-calendar tap-highlight-none">
+  <div class="h-full" data-left-sidebar--my-agenda-target="scrollContent">
+    <div id="calendar" data-left-sidebar--my-agenda-target="calendar" class="mt-3 select-none simple-calendar tap-highlight-none">
       <div class="calendar-heading">
         <%= reflex_tag :prev_month, :div, class: 'cursor-pointer text-green-500 hover:bg-green-100 h-8 w-8 rounded-full flex justify-center items-center' do %>
           <svg class="h-5 fill-current" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24">
@@ -30,7 +30,7 @@
         <% date_range.each_slice(7) do |week| %>
           <tr>
             <% week.each do |day| %>
-              <%= content_tag :td, data: {key: key, action: 'click->left-sidebar--my-agenda#inDay', day: day.strftime}, class: td_classes_for(day) do %>
+              <%= content_tag :td, id: "calendar-#{day.strftime}", data: {key: key, action: 'click->left-sidebar--my-agenda#inDay', day: day.strftime}, class: td_classes_for(day) do %>
                 <%= content_tag :div, class: 'mx-auto text-xs day-of-month' do %>
                   <%= day.strftime '%e' %>
                 <% end %>
