--- a/web/app/components/main_sidebar/horizontal_event_component.html.erb
+++ b/web/app/components/main_sidebar/horizontal_event_component.html.erb
@@ -1,4 +1,4 @@
-<%= component_controller data: { 'main-sidebar--horizontal-event-open-in-sidebar': @open_in_sidebar } do %>
+<%= component_controller id: dom_id(@event, :'hero--horizontal'), data: { 'main-sidebar--horizontal-event-open-in-sidebar': @open_in_sidebar, 'main-sidebar--horizontal-event-id': @event.id } do %>
 	<div class="flex bg-white justify-between p-5 border-b md:border-0 border-gray-50">
 		<div class="pr-6">
 			<div class="mb-1 text-sm  text-gray-500">
@@ -10,9 +10,8 @@
 			<%= content_tag :a,
 											href:  event_path(@event),
 											data:  {
-												action:     'click->main-sidebar--horizontal-event#openEvent',
-												url:        event_path(@event),
-												'event-id': @event.id
+												action: 'click->main-sidebar--horizontal-event#openEvent',
+												url:    event_path(@event),
 											},
 											class: 'font-semibold md:hover:underline mb-1 leading-snug text-gray-700' do %>
 				<%= @event.details_name %>
