--- a/web/app/components/main_sidebar/my_agenda_component.html.erb
+++ b/web/app/components/main_sidebar/my_agenda_component.html.erb
@@ -1,5 +1,5 @@
 <%= component_controller id: 'my-agenda', class: 'mb-24' do %>
-  <div id="calendar" data-target="main-sidebar--my-agenda.calendar" class="mt-3 mb-24 select-none simple-calendar tap-highlight-none">
+  <div id="calendar" data-main-sidebar--my-agenda-target="calendar" class="mt-3 mb-24 select-none simple-calendar tap-highlight-none">
     <div class="calendar-heading">
       <%= reflex_tag :prev_month, :div, class: 'cursor-pointer text-green-500 hover:bg-green-100 h-8 w-8 rounded-full flex justify-center items-center' do %>
         <svg class="h-5 fill-current" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24">
