--- a/web/app/components/user_chip_component.html.erb
+++ b/web/app/components/user_chip_component.html.erb
@@ -25,7 +25,7 @@
 		<% end %>
 
 		<% if @editing %>
-			<div id="sheet-content" data-target="sheet.content" class="fixed top-0 left-0 z-50 w-screen h-screen">
+			<div id="sheet-content" data-sheet-target="content" class="fixed top-0 left-0 z-50 w-screen h-screen">
 				<%= content_tag :div, nil, data: {action: 'click->user-chip#endEdit', key: key}, class: 'w-full h-full bg-black opacity-50' %>
 				<div class="md:max-w-sm md:ml-6 absolute bottom-0 flex flex-col w-screen p-5 pb-8 space-y-5 bg-white rounded-t-lg h-content">
 					<div class="flex items-center space-x-5 font-medium">
