--- a/web/app/views/components/collection/_event.html.erb
+++ b/web/app/views/components/collection/_event.html.erb
@@ -35,7 +35,7 @@
 		 data-event-identifier="<%= event.id %>"
 		 data-event-similar-loading="false"
 		 data-event-similar-open="<%= is_similar_open %>"
-		 data-target="event.event"
+		 data-toggle-style-target="event"
 		 id="<%= "cell-#{section_identifier}-#{dom_id event}" %>"
 		 style="order: <%= event_counter + 1 %>">
 	<div data-controller="ripple" class="relative overflow-hidden ripple ripple-white">
@@ -48,7 +48,7 @@
 		} if event.image[:feed] %>
 	</div>
 	<div class="inline-flex pt-1 px-2 quinta text-gray-600 <%= event.day_of_week['decorator'].parameterize %>"
-			 data-target="event.date">
+			 data-toggle-style-target="date">
 		<div class="mt-2 mr-3">
 			<%#= render partial: 'components/taste_buttons',
 								 locals:  {
@@ -148,7 +148,8 @@
 			<div
 				class="flex justify-center px-2 py-2 text-sm text-gray-700 bg-gray-50 rounded-b-lg cursor-pointer hover:bg-gray-50 hover:border-none"
 				data-action="click->event#showSimilar click->toggle-loader#toggle"
-				data-target="event.similar toggle-loader.off"
+				data-toggle-style-target="similar"
+				data-toggle-loader-target="off"
 				title="Mostrar eventos parecidos">
 				Similares
 				<svg class="w-3 h-3 my-auto ml-1 fill-current" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24">
@@ -158,9 +159,9 @@
 			</div>
 			<div
 				class="flex justify-center hidden px-2 py-2 text-sm text-gray-700 bg-gray-50 rounded-b-lg cursor-pointer hover:bg-gray-50 hover:border-none"
-				data-target="toggle-loader.on">
+				data-toggle-loader-target="on">
 				Carregando
-				<svg data-target="toggle-loader.onIcon" class="w-4 h-4 my-auto fill-current" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24">
+				<svg data-toggle-loader-target="onIcon" class="w-4 h-4 my-auto fill-current" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24">
 					<path fill="none" d="M0 0h24v24H0V0z"/>
 					<path d="M17.65 6.35c-1.63-1.63-3.94-2.57-6.48-2.31-3.67.37-6.69 3.35-7.1 7.02C3.52 15.91 7.27 20 12 20c3.19 0 5.93-1.87 7.21-4.56.32-.67-.16-1.44-.9-1.44-.37 0-.72.2-.88.53-1.13 2.43-3.84 3.97-6.8 3.31-2.22-.49-4.01-2.3-4.48-4.52C5.31 9.44 8.26 6 12 6c1.66 0 3.14.69 4.22 1.78l-1.51 1.51c-.63.63-.19 1.71.7 1.71H19c.55 0 1-.45 1-1V6.41c0-.89-1.08-1.34-1.71-.71l-.64.65z"/>
 				</svg>
