--- a/web/app/views/components/collection/_movie.html.erb
+++ b/web/app/views/components/collection/_movie.html.erb
@@ -15,7 +15,7 @@
 <% if movie.image.try { |image| image[:medium] } %>
 	<div class="md:w-32 relative w-24"
 			 data-controller="movie"
-			 data-target="movie.movie"
+			 data-movie-target="movie"
 			 id="<%= "#{section_identifier}-#{dom_id(movie)}" %>">
 		<div class="absolute bg-white m-1 me-movie__vote pl-1 pr-2 rounded-full shadow-sm text-gray-800 text-sm z-10">
 			<%= movie.details_vote_average %> ⭐
