--- a/web/app/views/components/collection/movies/_collection.html.erb
+++ b/web/app/views/components/collection/movies/_collection.html.erb
@@ -23,11 +23,11 @@
 				</svg>
 			</div>
 		</div>
-		<div data-target="slider.scroller"
+		<div data-slider-target="scroller"
 				 class="scrollx">
 			<div class="gap-5 grid grid-flow-col w-content pl-5 md:pl-0 grid-after-margin pt-3"
 					 data-movie-collection-turbolinks-persist-scroll="0"
-					 data-target="movie-collection.scrollContainer">
+					 data-movie-collection-target="scrollContainer">
 				<%= render(partial:    'components/collection/movie',
 									 collection: collection[:items],
 									 as:         :movie,
