--- a/web/app/views/feeds/neighborhood.html.erb
+++ b/web/app/views/feeds/neighborhood.html.erb
@@ -20,7 +20,7 @@
 				 data-controller="scroll-on-clicked"
 				 data-scroll-on-clicked-init-selected="<%= params[:neighborhood] %>"
 				 data-scroll-on-clicked-offset-left="24"
-				 data-target="scroll-on-clicked.scroller">
+				 data-scroll-on-clicked-target="scroller">
 			<div data-controller="toggle-style go-to"
 					 data-go-to-delay="250"
 					 data-toggle-style-init-selected="<%= params[:neighborhood] %>"
@@ -30,7 +30,8 @@
 					 class="flex flex-wrap md:pl-0 md:pr-0 md:w-full pl-5 pr-5 w-content">
 				<% @neighborhoods.each do |neighborhood| %>
 					<div data-action="click->scroll-on-clicked#scroll click->toggle-style#toggle click->go-to#url"
-							 data-target="toggle-style.toggle scroll-on-clicked.item"
+							 data-toggle-style-target="toggle"
+							 data-scroll-on-clicked-target="item"
 							 data-toggle-style-identifier="<%= neighborhood.try(:parameterize_with_accents) %>"
 							 data-scroll-on-clicked-selected="<%= params[:neighborhood] == neighborhood.try(:parameterize_with_accents) %>"
 							 data-go-to-url="<%= neighborhood_events_path neighborhood.try(:parameterize_with_accents) %>"
