--- a/web/app/views/layouts/_bot.html.erb
+++ b/web/app/views/layouts/_bot.html.erb
@@ -1,11 +1,11 @@
-<div data-controller="bot" data-target="bot.bot" data-bot-already-open="false" class="bot">
-	<div data-target="bot.start" data-action="click->bot#showBot" class="bot__start">
+<div data-controller="bot" data-bot-target="bot" data-bot-already-open="false" class="bot">
+	<div data-bot-target="start" data-action="click->bot#showBot" class="bot__start">
 		<span>
 			
 			Vamos descobrir seu perfil para eu começar a te indicar eventos? <b class="bot__pre-response">Vamos</b>
 		</span>
 	</div>
-	<div data-target="bot.conversation" class="wrapper">
+	<div data-bot-target="conversation" class="wrapper">
 		<div data-action="click->bot#hideBot" class="bot__close">Fechar</div>
 		<div id="message_window">
 			<div class="disconnected">
