--- a/web/app/views/layouts/_top-app-bar.html.erb
+++ b/web/app/views/layouts/_top-app-bar.html.erb
@@ -69,7 +69,7 @@
 			<form
 				class="flex items-center h-full px-2 bg-white rounded md:px-5"
 				data-controller="search"
-				data-target="search.search"
+				data-search-target="search"
 				data-reflex-permanent
 				data-turbolinks-permanent
 				action="/busca"
@@ -86,10 +86,10 @@
 							 id="text-field-shape-one"
 							 placeholder="Busque por eventos ou tags..."
 							 type="text"
-							 data-target="search.input">
+							 data-search-target="input">
 				<input class="h-10 px-4 my-1 ml-3 text-sm antialiased font-light font-semibold text-gray-700 text-green-600 bg-green-200 rounded cursor-pointer md:hidden"
 							 type="submit" value="Buscar"
-							 data-target="search.submit"
+							 data-search-target="submit"
 							 data-action="click->search#searching"/>
 			</form>
 		</div>
