--- a/web/app/views/users/agenda.html.erb
+++ b/web/app/views/users/agenda.html.erb
@@ -1,6 +1,6 @@
 <% content_for :top_app_bar_title, 'Minha agenda' %>
 <% content_for :back_button, true %>
 
-<section data-controller="page" data-target="page.page" class="pt-2 mx-auto space-y-2 bg-gray-50 is-animated lg:w-9/12 md:mt-40 sm:container">
+<section data-controller="page" data-page-target="page" class="pt-2 mx-auto space-y-2 bg-gray-50 is-animated lg:w-9/12 md:mt-40 sm:container">
   <%= render MainSidebar::MyAgendaComponent.new(events: @liked_events, user: current_user) %>
 </section>
